able to generate chart

--- a/open_farm_analytics/css/open_farm_analytics_visualizer.css
+++ b/open_farm_analytics/css/open_farm_analytics_visualizer.css
@@ -1,3 +1,8 @@
-.viz_display{
-    background-color: orangered;
+.flex-container .fieldset-wrapper{
+    display: flex;
+    flex-direction: row;
+}
+.flex-container .fieldset-wrapper .data_element{
+    margin: 10px;
+    padding: 20px;
 }
