--- a/modules/open_farm_dashboard/css/open_farm_dashboard.css
+++ b/modules/open_farm_dashboard/css/open_farm_dashboard.css
@@ -1,4 +1,48 @@
 .dashboard-container{
-    display: flex;
+    /*width:  100%;*/
+    /*height: 100%;*/
+    /*display: flex;
     flex-direction: column;
+    height: 50%;
+    */
+}
+.dashboard-row{
+    /*background-color: red;*/
+    display: flex;
+    flex-direction: row;
+    /*height: 50%;*/
+    /*width:  100%;*/
+}
+/*
+#content .section {
+    display: flex;
+    width:  100%;
+}
+#content .section > div{
+    display: flex;
+    width:  100%;
+}
+#block-bartik-content{
+    display: flex;
+    width:  100%;
+}
+.content{
+    display: flex;
+    width:  100%;
+}
+*/
+
+.dashlet{
+    border: 1px solid #ccc!important;
+    max-width: 800px;
+    height: 400px;
+    margin: 0 auto
+}
+.dashboard-container .column {
+    border: 1px solid #ccc!important;
+}
+.column{
+    /*display: flex;*/
+    /*height: 400px;*/
+
 }
