--- a/templates/open_farm_data_store.html.twig
+++ b/templates/open_farm_data_store.html.twig
@@ -20,3 +20,13 @@
     {{- content -}}
   {% endif %}
 </div>
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">Modal boday</div>
+      <div class="modal-footer">
+        <button type="button" class="btn" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
